# ethz-algolab

./: .editorconfig  .gitignore  Makefile  algolab.sh
cpp_intro/basic_data_types/: .algolab  CMakeLists.txt
cpp_intro/bfs/: CMakeLists.txt
cpp_intro/build_the_sum/: .algolab  CMakeLists.txt
cpp_intro/dfs/: .algolab  CMakeLists.txt
cpp_intro/hello_world/: CMakeLists.txt
cpp_intro/maps/: CMakeLists.txt
cpp_intro/sets/: CMakeLists.txt
cpp_intro/sort/: CMakeLists.txt
cpp_intro/strings/: CMakeLists.txt
cpp_intro/vectors/: CMakeLists.txt
potw/attack_of_the_clones/: .algolab  CMakeLists.txt
potw/chariot_race/: .algolab  CMakeLists.txt
potw/courier/: CMakeLists.txt  algolab.sh
potw/deck_of_cards/: CMakeLists.txt
potw/goldeneye/: CMakeLists.txt
potw/india/: CMakeLists.txt
potw/motorcycles/: CMakeLists.txt
potw/planet_express/: CMakeLists.txt
potw/russia/: CMakeLists.txt
potw/san_francisco/: .algolab  CMakeLists.txt
potw/sith/: CMakeLists.txt
potw/suez/: CMakeLists.txt
print/: .gitignore  Makefile  index.tex
week01/dominoes/: CMakeLists.txt
week01/even_matrices/: .algolab  CMakeLists.txt
week01/even_pairs/: CMakeLists.txt
week02/great_game/: .algolab
week03/: russia
week07/: attack_of_the_clones
week08/: courier
week08/h1n1/: .algolab
week1/: deck_of_cards
week10/: goldeneye
week10/defensive_line/: .algolab  CMakeLists.txt
week10/defensive_line/src/: algorithm.cpp
week11/: india
week12/: san_francisco
week13/: sith
week14/: carsharing
week4/: chariot_race  motorcycles
week6/: planet_express
week9/: suez
(+437 files in other folders)
